--- a/exercicios/paginas/fundamentos.html
+++ b/exercicios/paginas/fundamentos.html
@@ -1,5 +1,23 @@
 <!-- Título (jumbotron) -->
 <!-- Breadcrumb -->
+<div class="jumbotron p-4 my-1">
+    <h1 class="display-4">Fundamentos</h1>
+    <p class="lead m-1">Alguns recursos Importante do Bootstrap</p>
+
+</div>
+
+<nav class="mb-5">
+    <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <a href="#/paginas/bemVindo.html">Home</a>
+        </li>
+        <li class="breadcrumb-item active">Fundamentos</li>
+    </ol>
+
+</nav>
+
+
+
 
 <div class="exercicio">
     <h1>1. Tipografia -
@@ -26,6 +44,14 @@
 
     <!-- Espaços -->
 
+    <div class="mb-5">1</div>
+    <div class="m-4 py-4">2</div>
+    <div class="pt-5">3</div>
+
+      
+
+
+
     <h1 class="mt-5">3. Cores -
         <small>
             <a href="https://getbootstrap.com/docs/4.0/utilities/colors/" target="_black">Documentação Oficial</a>
@@ -35,6 +61,10 @@
 
     <!-- Cores -->
 
+    <div class="my-1 p-3 bg-primary text-light">1</div>
+    <div class="my-1 p-3 bg-danger text-white">2</div>
+    <div class="my-1 p-3 bg-warning text-success">3</div>
+
     <h1 class="mt-5">4. Flex -
         <small>
             <a href="https://getbootstrap.com/docs/4.0/utilities/flex/" target="_black">Documentação Oficial</a>
@@ -42,7 +72,18 @@
     </h1>
     <hr>
 
+
     <!-- Flex -->
+
+    <div class="d-lg-flex flex-column-reverse p-2">
+        <div class="align-self-end">1</div>
+        <div class="align-self-center">2</div>
+        <div class="align-self-start">3</div>
+
+    </div>
+
+
+
 
     <h1 class="mt-5">5. Imagens -
         <small>
@@ -50,6 +91,12 @@
         </small>
     </h1>
     <hr>
+
+
+
+
+
+
 
     <!-- Imagens -->
 
