--- a/exercicios/paginas/fundamentos.html
+++ b/exercicios/paginas/fundamentos.html
@@ -83,7 +83,7 @@
     </div>
 
 
-
+<!-- Imagens -->
 
     <h1 class="mt-5">5. Imagens -
         <small>
@@ -94,11 +94,19 @@
 
 
 
+<div class="p-2">
+    <img src="/imgs/img1.png" alt="Imagem 1" 
+    class="mx-auto d-block" width="400">
+    <img src="/imgs/img1.png" alt="Imagem 1" 
+    class="img-thumbnail" width="400">
+    <img src="/imgs/img1.png" alt="Imagem 1" 
+    class="img-fluid rounded-circle" width="400">
+</div>
+    
+   
 
-
-
-
-    <!-- Imagens -->
+    <!-- Float -->
+    
 
     <h1 class="mt-5">6. Float -
         <small>
@@ -107,7 +115,16 @@
     </h1>
     <hr>
 
-    <!-- Float -->
+
+    <div class="my-1 p-3 float-left">1</div>
+    <div class="my-1 p-3 float-right">2</div>
+    <div class="my-1 p-3 float-lg-right">3</div>
+
+
+
+
+
+
 </div>
 
 <style>
