--- a/exercicios/paginas/componentes.html
+++ b/exercicios/paginas/componentes.html
@@ -195,6 +195,21 @@
 </h1>
 <hr>
 
+<div>
+
+    <div class="alert alert-warning">
+        Precisa chamar um função JS
+        <strong> E agora?</strong>
+    </div>
+
+    <button class="btn btn-danger" data-toggle="tooltip" 
+    data-placement="bottom" title="Pense Antes!">
+    Excluir
+    </button>
+
+
+</div>
+
 
 
 <!-- Slider -->
@@ -206,6 +221,29 @@
 </h1>
 <hr>
 
+
+    <div>
+        <div id="slider" class="carousel slide"  data-ride="carousel">
+            <div class="carousel-inner bg-dark">
+                <div class="carousel-item active">
+                    <img src="/imgs/slide1.png" alt="slide1" class="d-block mx-auto">
+                </div>
+                <div class="carousel-item ">
+                    <img src="/imgs/slide2.png" alt="slide2" class="d-block mx-auto">
+                </div>
+                <div class="carousel-item ">
+                    <img src="/imgs/slide3.png" alt="slid3" class="d-block mx-auto">
+                </div>
+            </div>
+            <a href="#slider" class="carousel-control-prev" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+            </a>
+            <a href="#slider" class="carousel-control-next" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+            </a>
+            
+        </div>
+    </div>
 
 
 
@@ -221,7 +259,55 @@
 <hr>
 
 
+<div class="mb-5 accordion">
+    <div class="card">
+        <div class="card-header" id="pergunta1">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" 
+                data-target="#resposta1">
+                Quem é o professor de programação que não é legal?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta1" data-parent="#accordion">
+            <div class="card-body">
+                Posso dizer?
+            </div>
+        </div>
+        <div class="card-header" id="pergunta2">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" 
+                data-target="#resposta2">
+                Teste2?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta2" data-parent="#accordion">
+            <div class="card-body">
+                Posso Falar!
+            </div>
+        </div>
+        <div class="card-header" id="pergunta3">
+            <h5 class="mb-0">
+                <button class="btn btn-link" data-toggle="collapse" 
+                data-target="#resposta3">
+                Teste EEEE?
+                </button>
+            </h5>
+        </div>
+        <div class="collapse" id="resposta3" data-parent="#accordion">
+            <div class="card-body">
+                Posso Falar!!!
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 <script>
-    // ...
+    //Funciona?
+
+    
+    $('[data-toggle="tooltip"]').tooltip()
 </script>
